# flux-cli

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.cpp
src/commands/: create.cpp  create.hpp  run.cpp  run.hpp
src/utils/: config.cpp  config.hpp  fs.cpp  fs.hpp  process.cpp  process.hpp
templates/: flux.json  main.cpp
templates/android/app/: build.gradle.kts
templates/android/app/src/main/: AndroidManifest.xml
templates/android/app/src/main/cpp/: CMakeLists.txt
templates/android/app/src/main/java/com/example/newapp/: MainActivity.kt
templates/android/app/src/main/java/com/flux/: FluxBridge.java
templates/android/gradle/wrapper/: gradle-wrapper.properties
templates/linux/: CMakeLists.txt
templates/windows/: CMakeLists.txt
